# edgebench-local-guardrails

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: deps.py  main.py
config/: benchmark.yaml  deterministic.yaml  models.yaml  run.yaml  temperature_sweep.yaml
data/: README.md  demo_prompt_1.jsonl  demo_prompts_2.jsonl  generate_synthetic_prompts.py  smoke_prompts_10.jsonl
docs/: ADR-0001-architecture.md  design-decisions.md
edgebench/: __init__.py  cli.py  config.py  constants.py  errors.py  types.py
edgebench/ollama/: client.py  stream_parser.py
edgebench/prompts/: templates.py
edgebench/report/: generator.py  markdown.py  stats.py
edgebench/runner/: __init__.py  benchmark_runner.py  determinism.py  gpu_monitor.py  job_store.py  memory_monitor.py  queue.py  result_writer.py  retry_pipeline.py  summarizer.py  temperature_sweep.py
edgebench/scoring/: base.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json
report/: README.md  generate_report.py  report_fixed.md  template.md.j2
scripts/: edgebench_cli.ps1  first_run.ps1  generate_cli_screenshots.py  generate_report.ps1  run_backend.ps1  run_benchmark.ps1  run_frontend.ps1  setup_windows.ps1
tests/: test_cli_commands.py  test_determinism_hashing.py  test_error_classification.py  test_memory_monitor.py  test_metrics_calculation.py  test_result_writer.py  test_retry_pipeline.py  test_schema_validation.py  test_temperature_sweep_stats.py
(+39 files in other folders)
