[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgebench"
version = "0.2.0"
description = "Offline-first local LLM benchmark and structured output guardrails"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "PyYAML==6.0.2",
  "psutil==7.0.0",
  "jinja2==3.1.5",
  "python-multipart==0.0.20",
]

[tool.setuptools.packages.find]
include = ["edgebench*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []
exclude = ["frontend", "results", "data"]

[[tool.mypy.overrides]]
module = ["psutil", "yaml"]
ignore_missing_imports = true
